src/objects/MICO_Processes__c.object
<CustomObject>
    <description>Business Description: This object is used to store processes in order to group user stories and understand how business processes are being delivered.

Used In: Mission Control App</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>No_Process_Steps__c</fullName>
        <inlineHelpText>The number of steps associated with this process</inlineHelpText>
        <label>No. Process Steps</label>
        <summaryForeignKey>MICO_Process_Step__c.HL_Process__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Participants__c</fullName>
        <label>Participants</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Process_Group__c</fullName>
        <inlineHelpText>The level 2 process</inlineHelpText>
        <label>Process Group</label>
        <picklist>
            <picklistValues>
                <fullName>Market Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing / Multichannel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event / Medical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analytics / Insights</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>MICO_Project__c</referenceTo>
        <relationshipLabel>Processes</relationshipLabel>
        <relationshipName>MICO_Processes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Optional external reference (e.g. to a spreadsheet or third party application)</inlineHelpText>
        <label>Reference</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>Is this a system process (one that needs to be directly supported within the application)
or a manual process (one that happens outside of the system, but whose results may feed in to the system at some point)</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Process</label>
    <listViews>
        <fullName>AllProcesses</fullName>
        <columns>Process_Group__c</columns>
        <columns>NAME</columns>
        <columns>Reference__c</columns>
        <columns>No_Process_Steps__c</columns>
        <filterScope>Everything</filterScope>
        <label>1) All Processes</label>
    </listViews>
    <listViews>
        <fullName>MyProcesses</fullName>
        <columns>Process_Group__c</columns>
        <columns>NAME</columns>
        <columns>Reference__c</columns>
        <columns>No_Process_Steps__c</columns>
        <filterScope>Mine</filterScope>
        <label>0) My Processes</label>
    </listViews>
    <nameField>
        <label>Process Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Processes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>